--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!doctype html><html lang="en"><meta charset="utf-8"/><title>ToDoList App</title><link href="styles.css" rel="stylesheet"/><script defer="defer" src="/bcstith/todo/static/js/main.57ac51ea.js"></script><link href="/bcstith/todo/static/css/main.e6c13ad2.css" rel="stylesheet"><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+  <meta charset="utf-8"/>
+  <title>ToDoList App</title>
+  <link href="styles.css" rel="stylesheet"/>
+  <script defer="defer" src="https://bcstith.github.io/todo/static/js/main.57ac51ea.js"></script>
+  <link href="https://bcstith.github.io/todo/static/css/main.e6c13ad2.css" rel="stylesheet">
+  <body><noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
